force-app/main/default/objects/Integracao__mdt/Integracao__mdt.object-meta.xml
<CustomObject>
    <description>Utilizado para as configurações das integrações.</description>
    <label>Integração</label>
    <pluralLabel>Integrações</pluralLabel>
</CustomObject>