force-app/main/default/objects/Integracao__mdt/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>