force-app/main/default/objects/Integracao__mdt/fields/apiKey__c.field-meta.xml
<CustomField>
    <fullName>apiKey__c</fullName>
    <description>API Key utilizada na integração com AISWEB</description>
    <inlineHelpText>API Key utilizada na integração com AISWEB</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>