force-app/main/default/objects/Integracao__mdt/fields/apiPass__c.field-meta.xml
<CustomField>
    <fullName>apiPass__c</fullName>
    <description>API Pass da integração com o sistema AISWEB</description>
    <inlineHelpText>API Pass da integração com o sistema AISWEB</inlineHelpText>
    <label>API Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>