force-app/main/default/objects/Integracao__mdt/fields/EndpointLogin__c.field-meta.xml
<CustomField>
    <fullName>EndpointLogin__c</fullName>
    <label>EndpointLogin</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>