force-app/main/default/objects/Integracao__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>TextArea</type>
</CustomField>