force-app/main/default/objects/Integracao__mdt/fields/MethodLogin__c.field-meta.xml
<CustomField>
    <fullName>MethodLogin__c</fullName>
    <label>MethodLogin</label>
    <type>TextArea</type>
</CustomField>