force-app/main/default/objects/Integracao__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>