force-app/main/default/objects/Integracao__mdt/fields/PasswordLogin__c.field-meta.xml
<CustomField>
    <fullName>PasswordLogin__c</fullName>
    <label>PasswordLogin</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>