force-app/main/default/objects/Integracao__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>