force-app/main/default/objects/Integracao__mdt/fields/UsernameLogin__c.field-meta.xml
<CustomField>
    <fullName>UsernameLogin__c</fullName>
    <label>UsernameLogin</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>